--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "llel",
+  "name": "thread-utils",
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
-    "task:create-sandbox-perms": "node -r esm ./utils/create-test-permutations.js"
+    "watch": "npx nodemon --exec 'npm run build' -e .ts --watch lib-src",
+    "task:create-sandbox-perms": "node -r esm ./utils/create-test-permutations.js",
+    "test:dedupe": "node -r esm ./utils/dedupe-images.js"
   },
   "engines": {
     "node": ">14"
   },
   "esm": {
-    "await": true
+    "await": true,
+    "cache": false
   },
   "dependencies": {
+    "imghash": "^0.0.8",
+    "leven": "^3.1.0",
+    "lodash": "^4.17.21",
+    "p-limit": "^3.1.0",
+    "sharp": "^0.27.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "esm": "^3.2.25",
     "@types/node": "^14.14.31",
     "prettier": "^2.2.1",
-    "sharp": "^0.27.2",
     "typescript": "^4.2.3"
   }
 }
