--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "cache": false
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "imghash": "^0.0.8",
-    "leven": "^3.1.0",
     "lodash": "^4.17.21",
-    "p-limit": "^3.1.0",
+    "pg": "^8.5.1",
+    "sequelize": "^6.5.1",
     "sharp": "^0.27.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "esm": "^3.2.25",
     "@types/node": "^14.14.31",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
