Continued progress. Increased redundancy. Added additional mode selection

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "esm": "^3.2.25",
     "imghash": "^0.0.8",
     "lodash": "^4.17.21",
+    "minimist": "^1.2.5",
     "pg": "^8.5.1",
     "sequelize": "^6.5.1",
     "sharp": "^0.27.2",
