--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "npx nodemon --exec 'npm run build' -e .ts --watch lib-src",
-    "task:create-sandbox-perms": "node -r esm ./utils/create-test-permutations.js",
-    "pretest:dedupe": "rm -f sandbox/index.html",
-    "test:dedupe": "node -r esm ./utils/dedupe-images.js",
-    "sandbox": "npx serve sandbox"
+    "task:create-sandbox-perms": "node -r esm ./utils/create-test-permutations.js"
   },
   "engines": {
     "node": ">14"
@@ -19,11 +16,14 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
+    "filesize": "^6.1.0",
+    "finalhandler": "^1.1.2",
     "imghash": "^0.0.8",
     "lodash": "^4.17.21",
     "minimist": "^1.2.5",
     "pg": "^8.5.1",
     "sequelize": "^6.5.1",
+    "serve-static": "^1.14.1",
     "sharp": "^0.27.2",
     "uuid": "^8.3.2"
   },
